<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ar.com.futbolapp.ui.EditTextPreference
        android:capitalize="words"
        android:defaultValue=""
        android:inputType="textCapWords"
        android:key="display_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_profile_display_name"/>

    <ar.com.futbolapp.ui.DatePreference
        android:key="date_of_bith"
        android:title="@string/pref_profile_date_of_birth"/>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_profile_sex_list"
        android:entryValues="@array/pref_profile_sex_values"
        android:key="sex"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_profile_sex"
        android:summary="%s"/>

    <ar.com.futbolapp.ui.EditTextPreference
        android:capitalize="words"
        android:defaultValue=""
        android:inputType="numberDecimal"
        android:key="heigth"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_profile_height"
        android:drawableRight="@drawable/ic_person_black_18dp"/>

    <ar.com.futbolapp.ui.EditTextPreference
        android:capitalize="words"
        android:defaultValue=""
        android:inputType="numberDecimal"
        android:key="weigth"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_profile_weight"
        android:drawableRight="@drawable/ic_person_black_18dp"/>

</PreferenceScreen>
